Added content for Pad Thai page

--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
- <html>
-     <head>
-         <meta charset="UTF-8">
-         <title>Pad Thai</title>
-     </head>
-     <body>
-         <h1>Pad Thai Recipe</h1>
-     </body>
- </html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Pad Thai</title>
+  </head>
+  <body>
+    <h1>Pad Thai Recipe</h1>
+    <img src="./padthai.jpg" alt="Completed padthai" />
+    <h3>Traditional pad thai shrimp with all of the classic garnishes.</h3>
+    <p>
+      <strong></strong>Cooking pad thai is actually quite easy;</strong> after all it's a stir-fry! But
+      the fully-loaded, traditional version has a lot of ingredients, not all of
+      which are easy to find. For many restaurants some ingredients may not be
+      available, the many prep may be too complex for their simple operation, or
+      they need to keep the cost of such a staple item low. So things get left
+      out and substituted.
+    </p>
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>
+            Sauce:
+            <ul>
+                <li>palm sugar</li>
+                <li>water</li>
+                <li>tamarind</li>
+                <li>fish sauce</li>
+            </ul>
+        </li>
+        <li>
+            Pad Thai:
+            <ul>
+                <li>rice noodles</li>
+                <li>dried shrimp</li>
+                <li>garlic</li>
+                <li>shallots</li>
+                <li><a href="https://hot-thai-kitchen.com/best-pad-thai/">read more...</a></li>
+            </ul>
+        </li>
+
+    </ul>
+  </body>
+</html>
