Added padthai instructions

--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
+
+<head>
+    <meta charset="UTF-8">
     <title>Pad Thai</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Pad Thai Recipe</h1>
     <img src="./padthai.jpg" alt="Completed padthai" />
     <h3>Traditional pad thai shrimp with all of the classic garnishes.</h3>
     <p>
-      <strong></strong>Cooking pad thai is actually quite easy;</strong> after all it's a stir-fry! But
-      the fully-loaded, traditional version has a lot of ingredients, not all of
-      which are easy to find. For many restaurants some ingredients may not be
-      available, the many prep may be too complex for their simple operation, or
-      they need to keep the cost of such a staple item low. So things get left
-      out and substituted.
+        <strong>Cooking pad thai is actually quite easy;</strong> after all it's a stir-fry! But
+        the fully-loaded, traditional version has a lot of ingredients, not all of
+        which are easy to find. For many restaurants some ingredients may not be
+        available, the many prep may be too complex for their simple operation, or
+        they need to keep the cost of such a staple item low. So things get left
+        out and substituted.
     </p>
     <h2>Ingredients:</h2>
     <ul>
@@ -39,5 +41,6 @@
         </li>
 
     </ul>
-  </body>
+</body>
+
 </html>
