--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -1,46 +1,72 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Pad Thai</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Pad Thai Recipe</h1>
     <img src="./padthai.jpg" alt="Completed padthai" />
     <h3>Traditional pad thai shrimp with all of the classic garnishes.</h3>
     <p>
-        <strong>Cooking pad thai is actually quite easy;</strong> after all it's a stir-fry! But
-        the fully-loaded, traditional version has a lot of ingredients, not all of
-        which are easy to find. For many restaurants some ingredients may not be
-        available, the many prep may be too complex for their simple operation, or
-        they need to keep the cost of such a staple item low. So things get left
-        out and substituted.
+      <strong>Cooking pad thai is actually quite easy;</strong> after all it's a
+      stir-fry! But the fully-loaded, traditional version has a lot of
+      ingredients, not all of which are easy to find. For many restaurants some
+      ingredients may not be available, the many prep may be too complex for
+      their simple operation, or they need to keep the cost of such a staple
+      item low. So things get left out and substituted.
     </p>
     <h2>Ingredients:</h2>
     <ul>
-        <li>
-            Sauce:
-            <ul>
-                <li>palm sugar</li>
-                <li>water</li>
-                <li>tamarind</li>
-                <li>fish sauce</li>
-            </ul>
-        </li>
-        <li>
-            Pad Thai:
-            <ul>
-                <li>rice noodles</li>
-                <li>dried shrimp</li>
-                <li>garlic</li>
-                <li>shallots</li>
-                <li><a href="https://hot-thai-kitchen.com/best-pad-thai/">read more...</a></li>
-            </ul>
-        </li>
-
+      <li>
+        Sauce:
+        <ul>
+          <li>palm sugar</li>
+          <li>water</li>
+          <li>tamarind</li>
+          <li>fish sauce</li>
+        </ul>
+      </li>
+      <li>
+        Pad Thai:
+        <ul>
+          <li>rice noodles</li>
+          <li>dried shrimp</li>
+          <li>garlic</li>
+          <li>shallots</li>
+          <li>
+            <a href="https://hot-thai-kitchen.com/best-pad-thai/"
+              >read more...</a
+            >
+          </li>
+        </ul>
+      </li>
     </ul>
-</body>
-
+    <h2>Instructions:</h2>
+    <ul>
+      <li>
+        To make sauce:
+        <ol>
+          <li>Add palm sugar to a small pot and melt over medium heat</li>
+          <li>Bring sauce to a simmer, then turn off heat.</li>
+          <li>tamarind</li>
+          <li>fish sauce</li>
+        </ol>
+      </li>
+      <li>
+        To make Pad Thai:
+        <ol>
+          <li value="5">Cut drained noodles once with scissors so they are half as long. This makes them easier to toss and separate in the wok.</li>
+          <li>In a bowl, combine tofu, garlic, shallots, preserved radish, dried shrimp, and chili flakes.</li>
+          <li>Heat a wok or a large nonstick skillet over high heat and add just enough oil to coat the bottom. Sear shrimp, or whatever protein you're using, until done and remove them from pan.</li>
+          <li>
+            <a href="https://hot-thai-kitchen.com/best-pad-thai/"
+              >read more...</a
+            >
+          </li>
+        </ol>
+      </li>
+    </ul>
+  </body>
 </html>
