--- a/recipes/padthai.html
+++ b/recipes/padthai.html
@@ -16,7 +16,7 @@
       ingredients, not all of which are easy to find. For many restaurants some
       ingredients may not be available, the many prep may be too complex for
       their simple operation, or they need to keep the cost of such a staple
-      item low. So things get left out and substituted.
+      item low. So things get left out and substituted. hehe
     </p>
     <h2>Ingredients:</h2>
     <ul>
