Added "Tom Yum" and "Chicken Rice" pages

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
           <li>
               <a href="./recipes/padthai.html">Authentic Pad Thai</a>
          </li>
+          <li>
+              <a href="./recipes/padthai.html">Hainanese Chicken Rice</a>
+         </li>
+          <li>
+              <a href="./recipes/padthai.html">Tom Yum Soup</a>
+         </li>
       </ul>
   </body>
 </html>
