--- a/recipes/tomyum.html
+++ b/recipes/tomyum.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Recipes | Pad Thai</title>
+    <title>Recipes | Authentic Tom Yum</title>
   </head>
 
   <body>
-    <h1>Pad Thai Recipe</h1>
+    <h1>Thai Tom Yum Seafood Recipe</h1>
     <img src="./padthai.jpg" alt="Completed padthai" />
     <h3>Traditional pad thai shrimp with all of the classic garnishes.</h3>
     <p>
