Added CSS basic

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Odin Recipes</title>
@@ -13,10 +14,10 @@
               <a href="./recipes/padthai.html">Authentic Pad Thai</a>
          </li>
           <li>
-              <a href="./recipes/padthai.html">Hainanese Chicken Rice</a>
+              <a href="./recipes/chicken-rice.html">Hainanese Chicken Rice</a>
          </li>
           <li>
-              <a href="./recipes/padthai.html">Tom Yum Soup</a>
+              <a href="./recipes/tomyum.html">Tom Yum Soup</a>
          </li>
       </ul>
   </body>
